syntax = "proto3";

package flstorage.fedstoraging.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "flstorage/fedstoraging/v1/data_access_permission.proto";
import "flstorage/fedstoraging/v1/params.proto";
import "flstorage/fedstoraging/v1/stored_file.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "flstorage/x/fedstoraging/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/flstorage/fedstoraging/v1/params";
  }

  // ListStoredFile Queries a list of StoredFile items.
  rpc GetStoredFile(QueryGetStoredFileRequest) returns (QueryGetStoredFileResponse) {
    option (google.api.http).get = "/flstorage/fedstoraging/v1/stored_file/{original_hash}";
  }

  // ListStoredFile defines the ListStoredFile RPC.
  rpc ListStoredFile(QueryAllStoredFileRequest) returns (QueryAllStoredFileResponse) {
    option (google.api.http).get = "/flstorage/fedstoraging/v1/stored_file";
  }

  // ListDataAccessPermission Queries a list of DataAccessPermission items.
  rpc GetDataAccessPermission(QueryGetDataAccessPermissionRequest) returns (QueryGetDataAccessPermissionResponse) {
    option (google.api.http).get = "/flstorage/fedstoraging/v1/data_access_permission/{permission_id}";
  }

  // ListDataAccessPermission defines the ListDataAccessPermission RPC.
  rpc ListDataAccessPermission(QueryAllDataAccessPermissionRequest) returns (QueryAllDataAccessPermissionResponse) {
    option (google.api.http).get = "/flstorage/fedstoraging/v1/data_access_permission";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetStoredFileRequest defines the QueryGetStoredFileRequest message.
message QueryGetStoredFileRequest {
  string original_hash = 1;
}

// QueryGetStoredFileResponse defines the QueryGetStoredFileResponse message.
message QueryGetStoredFileResponse {
  StoredFile stored_file = 1 [(gogoproto.nullable) = false];
}

// QueryAllStoredFileRequest defines the QueryAllStoredFileRequest message.
message QueryAllStoredFileRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllStoredFileResponse defines the QueryAllStoredFileResponse message.
message QueryAllStoredFileResponse {
  repeated StoredFile stored_file = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryGetDataAccessPermissionRequest defines the QueryGetDataAccessPermissionRequest message.
message QueryGetDataAccessPermissionRequest {
  string permission_id = 1;
}

// QueryGetDataAccessPermissionResponse defines the QueryGetDataAccessPermissionResponse message.
message QueryGetDataAccessPermissionResponse {
  DataAccessPermission data_access_permission = 1 [(gogoproto.nullable) = false];
}

// QueryAllDataAccessPermissionRequest defines the QueryAllDataAccessPermissionRequest message.
message QueryAllDataAccessPermissionRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllDataAccessPermissionResponse defines the QueryAllDataAccessPermissionResponse message.
message QueryAllDataAccessPermissionResponse {
  repeated DataAccessPermission data_access_permission = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
